examples/datalog/14_aggregations/04_max.dl.out
Executing script: examples/datalog/14_aggregations/04_max.dl

> .db create test_agg_max
Database 'test_agg_max' created.
Switched to database: test_agg_max
> .db use test_agg_max
Switched to database: test_agg_max
> +reading[(1, 25), (1, 22), (1, 28), (2, 30), (2, 35), (3, 18)].
Inserted 6 facts into 'reading'.
> +max_temp(Sensor, max<Temp>) :- reading(Sensor, Temp).
Script error: Line 12: Parse error: Invalid term: 'max<Temp>'
